[gd_scene load_steps=4 format=2]

[ext_resource path="res://Terral/Terral.tscn" type="PackedScene" id=1]
[ext_resource path="res://Terral/TestArea.gd" type="Script" id=2]
[ext_resource path="res://Terral/TerralEgg.tscn" type="PackedScene" id=3]

[node name="TerralTestArea" type="Spatial"]
script = ExtResource( 2 )

[node name="Terral" parent="." instance=ExtResource( 1 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 1.801, 0, -3.748 )

[node name="Camera" type="Camera" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, 3.34321 )

[node name="DirectionalLight" type="DirectionalLight" parent="."]
transform = Transform( 0.916768, -0.174066, 0.359497, 0, 0.900045, 0.435797, -0.399421, -0.399524, 0.825132, 2.20264, 5.51362, -1.99598 )
light_energy = 0.333

[node name="Control" type="Control" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="Control"]
anchor_right = 1.0

[node name="HBoxContainer" type="HBoxContainer" parent="Control/VBoxContainer"]
margin_right = 720.0
margin_bottom = 16.0

[node name="Label" type="Label" parent="Control/VBoxContainer/HBoxContainer"]
margin_top = 1.0
margin_right = 23.0
margin_bottom = 15.0
text = "Sun"

[node name="Sun" type="HSlider" parent="Control/VBoxContainer/HBoxContainer"]
margin_left = 27.0
margin_right = 720.0
margin_bottom = 16.0
size_flags_horizontal = 3

[node name="HBoxContainer2" type="HBoxContainer" parent="Control/VBoxContainer"]
margin_top = 20.0
margin_right = 720.0
margin_bottom = 36.0

[node name="Label" type="Label" parent="Control/VBoxContainer/HBoxContainer2"]
margin_top = 1.0
margin_right = 22.0
margin_bottom = 15.0
text = "Sea"

[node name="Sea" type="HSlider" parent="Control/VBoxContainer/HBoxContainer2"]
margin_left = 26.0
margin_right = 720.0
margin_bottom = 16.0
size_flags_horizontal = 3

[node name="HBoxContainer3" type="HBoxContainer" parent="Control/VBoxContainer"]
margin_top = 40.0
margin_right = 720.0
margin_bottom = 56.0

[node name="Label" type="Label" parent="Control/VBoxContainer/HBoxContainer3"]
margin_top = 1.0
margin_right = 37.0
margin_bottom = 15.0
text = "Shock"

[node name="Shock" type="HSlider" parent="Control/VBoxContainer/HBoxContainer3"]
margin_left = 41.0
margin_right = 720.0
margin_bottom = 16.0
size_flags_horizontal = 3

[node name="HBoxContainer4" type="HBoxContainer" parent="Control/VBoxContainer"]
margin_top = 60.0
margin_right = 720.0
margin_bottom = 76.0

[node name="Label" type="Label" parent="Control/VBoxContainer/HBoxContainer4"]
margin_top = 1.0
margin_right = 36.0
margin_bottom = 15.0
text = "Stone"

[node name="Stone" type="HSlider" parent="Control/VBoxContainer/HBoxContainer4"]
margin_left = 40.0
margin_right = 720.0
margin_bottom = 16.0
size_flags_horizontal = 3

[node name="HBoxContainer5" type="HBoxContainer" parent="Control/VBoxContainer"]
margin_top = 80.0
margin_right = 720.0
margin_bottom = 96.0

[node name="Label" type="Label" parent="Control/VBoxContainer/HBoxContainer5"]
margin_top = 1.0
margin_right = 32.0
margin_bottom = 15.0
text = "Plant"

[node name="Plant" type="HSlider" parent="Control/VBoxContainer/HBoxContainer5"]
margin_left = 36.0
margin_right = 720.0
margin_bottom = 16.0
size_flags_horizontal = 3

[node name="TerralEgg" parent="." instance=ExtResource( 3 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -0.753, -0.997, -1.011 )

[connection signal="value_changed" from="Control/VBoxContainer/HBoxContainer/Sun" to="." method="_on_Sun_value_changed"]
[connection signal="value_changed" from="Control/VBoxContainer/HBoxContainer2/Sea" to="." method="_on_Sea_value_changed"]
[connection signal="value_changed" from="Control/VBoxContainer/HBoxContainer3/Shock" to="." method="_on_Shock_value_changed"]
[connection signal="value_changed" from="Control/VBoxContainer/HBoxContainer4/Stone" to="." method="_on_Stone_value_changed"]
[connection signal="value_changed" from="Control/VBoxContainer/HBoxContainer5/Plant" to="." method="_on_Plant_value_changed"]
